WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281828
[iOS] Selection disappears on login.live.com when SelectionHonorsOverflowScrolling is enabled
https://bugs.webkit.org/show_bug.cgi?id=281828
Summary
[iOS] Selection disappears on login.live.com when SelectionHonorsOverflowScro...
Wenson Hsieh
Reported
2024-10-19 16:13:31 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-19 16:13:50 PDT
<
rdar://problem/138255535
>
Wenson Hsieh
Comment 2
2024-10-19 17:49:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35496
EWS
Comment 3
2024-10-19 20:21:42 PDT
Committed
285483@main
(43c15c894941): <
https://commits.webkit.org/285483@main
> Reviewed commits have been landed. Closing PR #35496 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug